WIP OAPI 3.0 Annotations
