# app/Http/Controllers/V4DB/ScheduleController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\V4DB;
 use App\Anime;
 use App\Http\HttpResponse;
 use App\Http\Resources\V4\AnimeCollection;
+use App\Http\Resources\V4\CommonResource;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\DB;
 use Jikan\Request\Schedule\ScheduleRequest;
@@ -36,6 +37,105 @@ class ScheduleController extends Controller
     private $request;
     private $day;
 
+    /**
+     *  @OA\Get(
+     *     path="/schedules",
+     *     operationId="getSchedules",
+     *     tags={"schedules"},
+     *
+     *     @OA\Response(
+     *         response="200",
+     *         description="Returns weekly schedule",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Error: Bad request. When required parameters were not supplied.",
+     *     ),
+     * ),
+     *
+     * @OA\Schema(
+     *     schema="schedules",
+     *     description="List of weekly schedule",
+     *
+     *      @OA\Property(
+     *          property="data",
+     *          type="object",
+     *          @OA\Property(
+     *              property="monday",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *          @OA\Property(
+     *              property="tuesday",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *          @OA\Property(
+     *              property="wednesday",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *          @OA\Property(
+     *              property="thursday",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *          @OA\Property(
+     *              property="friday",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *          @OA\Property(
+     *              property="saturday",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *          @OA\Property(
+     *              property="sunday",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *          @OA\Property(
+     *              property="other",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *          @OA\Property(
+     *              property="unknown",
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  ref="#/components/schemas/anime",
+     *              ),
+     *          ),
+     *      ),
+     * ),
+     */
     public function main(Request $request, ?string $day = null)
     {
         $this->request = $request;
@@ -58,12 +158,10 @@ class ScheduleController extends Controller
         $results = $this->mutateQueryResponse($results);
 
         if (!is_null($this->day)) {
-            $results = [$this->day => $results[$this->day]];
+            $results = [$this->day => new AnimeCollection($results[$this->day])];
         }
 
-        return response()->json([
-            'data' => $results
-        ]);
+        return new CommonResource($results);
     }
 
     private function mutateQueryResponse($results)
