# app/Http/Resources/V4/ProducerResource.php
@@ -11,6 +11,31 @@ class ProducerResource extends JsonResource
      *
      * @param  \Illuminate\Http\Request  $request
      * @return array
+     *
+     *  @OA\Schema(
+     *      schema="producer",
+     *      description="Producer Resource",
+     *      @OA\Property(
+     *          property="mal_id",
+     *          type="integer",
+     *          description="MyAnimeList ID"
+     *      ),
+     *      @OA\Property(
+     *          property="name",
+     *          type="string",
+     *          description="Producer Name"
+     *      ),
+     *      @OA\Property(
+     *          property="url",
+     *          type="string",
+     *          description="MyAnimeList URL"
+     *      ),
+     *      @OA\Property(
+     *          property="count",
+     *          type="integer",
+     *          description="Producer's anime count"
+     *      ),
+     *  ),
      */
     public function toArray($request)
     {
